--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     "mocha": true
   },
   "rules": {
+    "import/no-unresolved": 1,
+    "import/extensions": 0,
     "camelcase": 0,
     "no-param-reassign": 0,
     "one-var": 0,
